Release 3.6.3
=============

Bugs fixed
----------

- Environment variables checks could report irrelevant or incorrect mismatches (issue #1201). This is fixed for `R_SESSION_TMPDIR` and `R_LIBS_USER`.

- R environments where missing the additional dispatching map for R classes.


Release 3.6.2
=============

Bugs fixed
----------

- :meth:`rpy2.rinterface.initr` was not skipping all initialization steps when the
  embedded R is already initialized by :mod:`rpy2` (contributed to issue #1190).

- More robust extraction of R-specific environment variables when running R on the
  command line has outputs to the terminal (issue #1195).

Changes
-------

- Warnings about R-related environment variables after initialization are downgraded
  to `INFO`-level and emitted by :obj:`rpy2.rinterface.logger` (solves issue #1190).

- On Windows, the determination of where `R.dll` is located now has a fallback if `make` and `bash`
  are not installed (issue #1188).


Release 3.6.1
=============

Bugs fixed
----------

- Clear warnings for deprecation of `rpy2.rinterface_lib.callbacks.obj_in_module`
  (issue #1181).

- Fix callback setup during initialization on Windows (issue #1183).

- In the R magic, setting options such as width, height, point size, etc. was broken
  in the new updated system to manage graphical devices.


Release 3.6.0
=============

New features
------------

- On systems where the default encoding is not utf-8, converting
  R strings to Python can result in decoding errors. The default
  encoding is now the system's encoding (rather than assume utf-8).
  This may provide a fix to issue #1018.

- Noteboook "R magic" features for ipython/jupyter support more
  graphical devices to render R graphics in notebooks. Registered
  devices are in :obj:`rpy2.ipython.rmags.graphics_devices`. This
  allows the specification of fallbacks when the preferred device is
  not available because of a missing R package. For SVG graphics,