@@ -6,6 +6,7 @@ R version, rpy2 version, etc...).
 
 import argparse
 import enum
+import locale
 import logging
 import os
 import shlex
@@ -22,6 +23,8 @@ else:
     r_version_folder = 'i386'
 
 ENVVAR_CFFI_TYPE: str = 'RPY2_CFFI_MODE'
+ENCODING_LOCALE = locale.getpreferredencoding()
+ENCODING_SYS = sys.getdefaultencoding()
 
 
 class CFFI_MODE(enum.Enum):
@@ -58,7 +61,7 @@ def r_version_from_subprocess():
     except Exception as e:  # FileNotFoundError, WindowsError, etc
         logger.error(f'Unable to determine the R version: {e}')
         return None
-    r_version = tmp.decode('ascii', 'ignore').split(os.linesep)
+    r_version = tmp.decode(ENCODING_LOCALE, 'ignore').split(os.linesep)
     if r_version[0].startswith('WARNING'):
         r_version = r_version[1]
     else:
@@ -242,15 +245,16 @@ def _get_r_cmd_config(r_home: str, about: str, allow_empty=False):
     output = subprocess.check_output(
         cmd,
         universal_newlines=True
-    ).split(os.linesep)
+    )
+    output_lst = output.encode(ENCODING_LOCALE).decode(ENCODING_SYS).split(os.linesep)
     # Twist if 'R RHOME' spits out a warning
-    if output[0].startswith('WARNING'):
-        msg = 'R emitting a warning: {}'.format(output[0])
+    if output_lst[0].startswith('WARNING'):
+        msg = 'R emitting a warning: {}'.format(output_lst[0])
         warnings.warn(msg)
         logger.debug(msg)
-        res = output[1:]
+        res = output_lst[1:]
     else:
-        res = output
+        res = output_lst
     logger.debug(res)
     return res
 
